// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Form Wrapper Default 1`] = `
.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 48px;
  min-width: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  width: 100%;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c9 .icon {
  line-height: 1;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 1.4em;
}

.c9:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c9:focus {
  box-shadow: none;
}

.c9:hover .icon,
.c9:focus .icon {
  color: white;
}

.c9:hover {
  background-color: #2980b9;
}

.c9:focus {
  background-color: #2980b9;
}

.c9:disabled,
.c9:disabled .icon,
.c9:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c9:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c2 span.margin-left {
  margin-left: 4px;
}

.c2 span.margin-right {
  margin-right: 4px;
}

.c2 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #3498db;
}

.c7 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  font-weight: 600;
  color: #2f313a;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.08);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c6 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > .input > input,
.select__search .c6 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c6 > .input > textarea {
  padding: 16px;
}

.c6 > .input > input,
.c6 > .input > textarea,
.select__search .c6 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c6 > .input > input::-webkit-input-placeholder,
.c6 > .input > textarea::-webkit-input-placeholder,
.select__search .c6 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::-moz-placeholder,
.c6 > .input > textarea::-moz-placeholder,
.select__search .c6 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input:-ms-input-placeholder,
.c6 > .input > textarea:-ms-input-placeholder,
.select__search .c6 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::placeholder,
.c6 > .input > textarea::placeholder,
.select__search .c6 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input[type="search"],
.c6 > .input > textarea[type="search"],
.select__search .c6 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c6 > .input > input[type="search"]::-webkit-search-cancel-button,
.c6 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c6 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c6 > .input > input[type="search"]::-ms-clear,
.c6 > .input > textarea[type="search"]::-ms-clear,
.select__search .c6 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c6 > .input > input[role="combobox"],
.c6 > .input > textarea[role="combobox"],
.select__search .c6 > .input input[role="combobox"] {
  cursor: pointer;
}

.c6 > .input > .icon {
  color: rgba(0,0,0,0.08);
  font-size: 20px;
  height: 24px;
}

.c6 > .input > .icon.left {
  margin-left: 12px;
}

.c6 > .input > .icon.dropdown {
  margin: 0 8px;
}

.c6 > .input > .clear {
  color: rgba(0,0,0,0.16);
  font-size: 20px;
  height: 24px;
  margin-right: 16px;
}

.c6 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c6 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c6 .input.dropdown {
  cursor: pointer;
}

.c6 input[type="number"] {
  -moz-appearance: textfield;
}

.c6 input[type="number"]::-webkit-inner-spin-button,
.c6 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c6 .prefix,
.c6 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #f6f8f9;
  color: #2f313a;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .label {
  margin-bottom: 8px;
}

.c5 {
  position: relative;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c5 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c5 .buttons {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 #cancel-button {
  margin: 0 8px;
}

.c4 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(0,0,0,0.16);
}

.c0 .title {
  margin-left: 16px;
}

.c0 .cancel {
  margin-left: 32px;
  margin-right: 16px;
}

.c8 {
  padding: 16px;
  border-top: 1px solid rgba(0,0,0,0.16);
}

.c3 {
  padding: 16px 16px 0 16px;
}

<div
  id="form-wrapper"
>
  <div
    className="c0 header"
  >
    <div
      className="c1 title"
      fontWeight="title"
      size={16}
      type="#2f313a"
    />
    <div
      className="c2 cancel"
      disabled={false}
      fontWeight="600"
      size={16}
      type="#59636f"
    >
      <span
        id="form-wrapper-cancel"
        onClick={[Function]}
      >
        Cancel
      </span>
    </div>
  </div>
  <div
    className="c3 body"
  >
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
          disabled={false}
          onClick={[Function]}
          type="text"
        >
          <div
            className="input"
          >
            <input
              className="wrapped"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
          <label
            className="c7 label"
            disabled={false}
          >
            First Name
          </label>
        </div>
      </div>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
          disabled={false}
          onClick={[Function]}
          type="text"
        >
          <div
            className="input"
          >
            <input
              className="wrapped"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
          <label
            className="c7 label"
            disabled={false}
          >
            Last Name
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c8 footer"
  >
    <button
      className="c9 save"
      id="form-wrapper-save"
      onClick={[Function]}
      size="MEDIUM"
      type="SECONDARY"
    >
      Save
    </button>
  </div>
</div>
`;

exports[`Storyshots Form Wrapper With id 1`] = `
.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 48px;
  min-width: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  width: 100%;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c9 .icon {
  line-height: 1;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 1.4em;
}

.c9:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c9:focus {
  box-shadow: none;
}

.c9:hover .icon,
.c9:focus .icon {
  color: white;
}

.c9:hover {
  background-color: #2980b9;
}

.c9:focus {
  background-color: #2980b9;
}

.c9:disabled,
.c9:disabled .icon,
.c9:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c9:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c2 span.margin-left {
  margin-left: 4px;
}

.c2 span.margin-right {
  margin-right: 4px;
}

.c2 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #3498db;
}

.c7 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  font-weight: 600;
  color: #2f313a;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.08);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c6 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > .input > input,
.select__search .c6 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c6 > .input > textarea {
  padding: 16px;
}

.c6 > .input > input,
.c6 > .input > textarea,
.select__search .c6 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c6 > .input > input::-webkit-input-placeholder,
.c6 > .input > textarea::-webkit-input-placeholder,
.select__search .c6 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::-moz-placeholder,
.c6 > .input > textarea::-moz-placeholder,
.select__search .c6 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input:-ms-input-placeholder,
.c6 > .input > textarea:-ms-input-placeholder,
.select__search .c6 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::placeholder,
.c6 > .input > textarea::placeholder,
.select__search .c6 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input[type="search"],
.c6 > .input > textarea[type="search"],
.select__search .c6 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c6 > .input > input[type="search"]::-webkit-search-cancel-button,
.c6 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c6 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c6 > .input > input[type="search"]::-ms-clear,
.c6 > .input > textarea[type="search"]::-ms-clear,
.select__search .c6 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c6 > .input > input[role="combobox"],
.c6 > .input > textarea[role="combobox"],
.select__search .c6 > .input input[role="combobox"] {
  cursor: pointer;
}

.c6 > .input > .icon {
  color: rgba(0,0,0,0.08);
  font-size: 20px;
  height: 24px;
}

.c6 > .input > .icon.left {
  margin-left: 12px;
}

.c6 > .input > .icon.dropdown {
  margin: 0 8px;
}

.c6 > .input > .clear {
  color: rgba(0,0,0,0.16);
  font-size: 20px;
  height: 24px;
  margin-right: 16px;
}

.c6 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c6 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c6 .input.dropdown {
  cursor: pointer;
}

.c6 input[type="number"] {
  -moz-appearance: textfield;
}

.c6 input[type="number"]::-webkit-inner-spin-button,
.c6 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c6 .prefix,
.c6 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #f6f8f9;
  color: #2f313a;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .label {
  margin-bottom: 8px;
}

.c5 {
  position: relative;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c5 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c5 .buttons {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 #cancel-button {
  margin: 0 8px;
}

.c4 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(0,0,0,0.16);
}

.c0 .title {
  margin-left: 16px;
}

.c0 .cancel {
  margin-left: 32px;
  margin-right: 16px;
}

.c8 {
  padding: 16px;
  border-top: 1px solid rgba(0,0,0,0.16);
}

.c3 {
  padding: 16px 16px 0 16px;
}

<div
  id="an-id"
>
  <div
    className="c0 header"
  >
    <div
      className="c1 title"
      fontWeight="title"
      size={16}
      type="#2f313a"
    />
    <div
      className="c2 cancel"
      disabled={false}
      fontWeight="600"
      size={16}
      type="#59636f"
    >
      <span
        id="an-id-cancel"
        onClick={[Function]}
      >
        Cancel
      </span>
    </div>
  </div>
  <div
    className="c3 body"
  >
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
          disabled={false}
          onClick={[Function]}
          type="text"
        >
          <div
            className="input"
          >
            <input
              className="wrapped"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
          <label
            className="c7 label"
            disabled={false}
          >
            First Name
          </label>
        </div>
      </div>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
          disabled={false}
          onClick={[Function]}
          type="text"
        >
          <div
            className="input"
          >
            <input
              className="wrapped"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
          <label
            className="c7 label"
            disabled={false}
          >
            Last Name
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c8 footer"
  >
    <button
      className="c9 save"
      id="an-id-save"
      onClick={[Function]}
      size="MEDIUM"
      type="SECONDARY"
    >
      Save
    </button>
  </div>
</div>
`;

exports[`Storyshots Form Wrapper With saveButtonProps customization 1`] = `
.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 32px;
  min-width: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  width: 100%;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #fd6a08;
  padding: 0 16px;
}

.c9 .icon {
  line-height: 1;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 1em;
}

.c9:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c9:focus {
  box-shadow: none;
}

.c9:hover .icon,
.c9:focus .icon {
  color: white;
}

.c9:hover {
  background-color: #E36009;
}

.c9:focus {
  background-color: #E36009;
}

.c9:disabled,
.c9:disabled .icon,
.c9:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c9:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c2 span.margin-left {
  margin-left: 4px;
}

.c2 span.margin-right {
  margin-right: 4px;
}

.c2 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #3498db;
}

.c7 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  font-weight: 600;
  color: #2f313a;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.08);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c6 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > .input > input,
.select__search .c6 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c6 > .input > textarea {
  padding: 16px;
}

.c6 > .input > input,
.c6 > .input > textarea,
.select__search .c6 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c6 > .input > input::-webkit-input-placeholder,
.c6 > .input > textarea::-webkit-input-placeholder,
.select__search .c6 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::-moz-placeholder,
.c6 > .input > textarea::-moz-placeholder,
.select__search .c6 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input:-ms-input-placeholder,
.c6 > .input > textarea:-ms-input-placeholder,
.select__search .c6 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::placeholder,
.c6 > .input > textarea::placeholder,
.select__search .c6 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input[type="search"],
.c6 > .input > textarea[type="search"],
.select__search .c6 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c6 > .input > input[type="search"]::-webkit-search-cancel-button,
.c6 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c6 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c6 > .input > input[type="search"]::-ms-clear,
.c6 > .input > textarea[type="search"]::-ms-clear,
.select__search .c6 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c6 > .input > input[role="combobox"],
.c6 > .input > textarea[role="combobox"],
.select__search .c6 > .input input[role="combobox"] {
  cursor: pointer;
}

.c6 > .input > .icon {
  color: rgba(0,0,0,0.08);
  font-size: 20px;
  height: 24px;
}

.c6 > .input > .icon.left {
  margin-left: 12px;
}

.c6 > .input > .icon.dropdown {
  margin: 0 8px;
}

.c6 > .input > .clear {
  color: rgba(0,0,0,0.16);
  font-size: 20px;
  height: 24px;
  margin-right: 16px;
}

.c6 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c6 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c6 .input.dropdown {
  cursor: pointer;
}

.c6 input[type="number"] {
  -moz-appearance: textfield;
}

.c6 input[type="number"]::-webkit-inner-spin-button,
.c6 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c6 .prefix,
.c6 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #f6f8f9;
  color: #2f313a;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .label {
  margin-bottom: 8px;
}

.c5 {
  position: relative;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c5 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c5 .buttons {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 #cancel-button {
  margin: 0 8px;
}

.c4 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(0,0,0,0.16);
}

.c0 .title {
  margin-left: 16px;
}

.c0 .cancel {
  margin-left: 32px;
  margin-right: 16px;
}

.c8 {
  padding: 16px;
  border-top: 1px solid rgba(0,0,0,0.16);
}

.c3 {
  padding: 16px 16px 0 16px;
}

<div
  id="form-wrapper"
>
  <div
    className="c0 header"
  >
    <div
      className="c1 title"
      fontWeight="title"
      size={16}
      type="#2f313a"
    >
      Title
    </div>
    <div
      className="c2 cancel"
      disabled={false}
      fontWeight="600"
      size={16}
      type="#59636f"
    >
      <span
        id="form-wrapper-cancel"
        onClick={[Function]}
      >
        Cancel
      </span>
    </div>
  </div>
  <div
    className="c3 body"
  >
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
          disabled={false}
          onClick={[Function]}
          type="text"
        >
          <div
            className="input"
          >
            <input
              className="wrapped"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
          <label
            className="c7 label"
            disabled={false}
          >
            First Name
          </label>
        </div>
      </div>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
          disabled={false}
          onClick={[Function]}
          type="text"
        >
          <div
            className="input"
          >
            <input
              className="wrapped"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
          <label
            className="c7 label"
            disabled={false}
          >
            Last Name
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c8 footer"
  >
    <button
      className="c9 save"
      id="form-wrapper-save"
      onClick={[Function]}
      size="SMALL"
      type="PRIMARY"
    >
      Save
    </button>
  </div>
</div>
`;

exports[`Storyshots Form Wrapper With title 1`] = `
.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 48px;
  min-width: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  width: 100%;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c9 .icon {
  line-height: 1;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 1.4em;
}

.c9:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c9:focus {
  box-shadow: none;
}

.c9:hover .icon,
.c9:focus .icon {
  color: white;
}

.c9:hover {
  background-color: #2980b9;
}

.c9:focus {
  background-color: #2980b9;
}

.c9:disabled,
.c9:disabled .icon,
.c9:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c9:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c2 span.margin-left {
  margin-left: 4px;
}

.c2 span.margin-right {
  margin-right: 4px;
}

.c2 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #3498db;
}

.c7 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  font-weight: 600;
  color: #2f313a;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.08);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c6 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > .input > input,
.select__search .c6 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c6 > .input > textarea {
  padding: 16px;
}

.c6 > .input > input,
.c6 > .input > textarea,
.select__search .c6 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c6 > .input > input::-webkit-input-placeholder,
.c6 > .input > textarea::-webkit-input-placeholder,
.select__search .c6 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::-moz-placeholder,
.c6 > .input > textarea::-moz-placeholder,
.select__search .c6 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input:-ms-input-placeholder,
.c6 > .input > textarea:-ms-input-placeholder,
.select__search .c6 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::placeholder,
.c6 > .input > textarea::placeholder,
.select__search .c6 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input[type="search"],
.c6 > .input > textarea[type="search"],
.select__search .c6 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c6 > .input > input[type="search"]::-webkit-search-cancel-button,
.c6 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c6 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c6 > .input > input[type="search"]::-ms-clear,
.c6 > .input > textarea[type="search"]::-ms-clear,
.select__search .c6 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c6 > .input > input[role="combobox"],
.c6 > .input > textarea[role="combobox"],
.select__search .c6 > .input input[role="combobox"] {
  cursor: pointer;
}

.c6 > .input > .icon {
  color: rgba(0,0,0,0.08);
  font-size: 20px;
  height: 24px;
}

.c6 > .input > .icon.left {
  margin-left: 12px;
}

.c6 > .input > .icon.dropdown {
  margin: 0 8px;
}

.c6 > .input > .clear {
  color: rgba(0,0,0,0.16);
  font-size: 20px;
  height: 24px;
  margin-right: 16px;
}

.c6 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c6 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c6 .input.dropdown {
  cursor: pointer;
}

.c6 input[type="number"] {
  -moz-appearance: textfield;
}

.c6 input[type="number"]::-webkit-inner-spin-button,
.c6 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c6 .prefix,
.c6 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #f6f8f9;
  color: #2f313a;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .label {
  margin-bottom: 8px;
}

.c5 {
  position: relative;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c5 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c5 .buttons {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 #cancel-button {
  margin: 0 8px;
}

.c4 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(0,0,0,0.16);
}

.c0 .title {
  margin-left: 16px;
}

.c0 .cancel {
  margin-left: 32px;
  margin-right: 16px;
}

.c8 {
  padding: 16px;
  border-top: 1px solid rgba(0,0,0,0.16);
}

.c3 {
  padding: 16px 16px 0 16px;
}

<div
  id="form-wrapper"
>
  <div
    className="c0 header"
  >
    <div
      className="c1 title"
      fontWeight="title"
      size={16}
      type="#2f313a"
    >
      Title
    </div>
    <div
      className="c2 cancel"
      disabled={false}
      fontWeight="600"
      size={16}
      type="#59636f"
    >
      <span
        id="form-wrapper-cancel"
        onClick={[Function]}
      >
        Cancel
      </span>
    </div>
  </div>
  <div
    className="c3 body"
  >
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
          disabled={false}
          onClick={[Function]}
          type="text"
        >
          <div
            className="input"
          >
            <input
              className="wrapped"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
          <label
            className="c7 label"
            disabled={false}
          >
            First Name
          </label>
        </div>
      </div>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
          disabled={false}
          onClick={[Function]}
          type="text"
        >
          <div
            className="input"
          >
            <input
              className="wrapped"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
          <label
            className="c7 label"
            disabled={false}
          >
            Last Name
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c8 footer"
  >
    <button
      className="c9 save"
      id="form-wrapper-save"
      onClick={[Function]}
      size="MEDIUM"
      type="SECONDARY"
    >
      Save
    </button>
  </div>
</div>
`;

exports[`Storyshots Form Wrapper extended style 1`] = `
.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 48px;
  min-width: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  width: 100%;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c10 .icon {
  line-height: 1;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 1.4em;
}

.c10:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c10:focus {
  box-shadow: none;
}

.c10:hover .icon,
.c10:focus .icon {
  color: white;
}

.c10:hover {
  background-color: #2980b9;
}

.c10:focus {
  background-color: #2980b9;
}

.c10:disabled,
.c10:disabled .icon,
.c10:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c10:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c3 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c3 span.margin-left {
  margin-left: 4px;
}

.c3 span.margin-right {
  margin-right: 4px;
}

.c3 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 > a {
  color: inherit;
}

.c3:hover {
  color: #3498db;
}

.c8 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  font-weight: 600;
  color: #2f313a;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.08);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c7 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 > .input > input,
.select__search .c7 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c7 > .input > textarea {
  padding: 16px;
}

.c7 > .input > input,
.c7 > .input > textarea,
.select__search .c7 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c7 > .input > input::-webkit-input-placeholder,
.c7 > .input > textarea::-webkit-input-placeholder,
.select__search .c7 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c7 > .input > input::-moz-placeholder,
.c7 > .input > textarea::-moz-placeholder,
.select__search .c7 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c7 > .input > input:-ms-input-placeholder,
.c7 > .input > textarea:-ms-input-placeholder,
.select__search .c7 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c7 > .input > input::placeholder,
.c7 > .input > textarea::placeholder,
.select__search .c7 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c7 > .input > input[type="search"],
.c7 > .input > textarea[type="search"],
.select__search .c7 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c7 > .input > input[type="search"]::-webkit-search-cancel-button,
.c7 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c7 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c7 > .input > input[type="search"]::-ms-clear,
.c7 > .input > textarea[type="search"]::-ms-clear,
.select__search .c7 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c7 > .input > input[role="combobox"],
.c7 > .input > textarea[role="combobox"],
.select__search .c7 > .input input[role="combobox"] {
  cursor: pointer;
}

.c7 > .input > .icon {
  color: rgba(0,0,0,0.08);
  font-size: 20px;
  height: 24px;
}

.c7 > .input > .icon.left {
  margin-left: 12px;
}

.c7 > .input > .icon.dropdown {
  margin: 0 8px;
}

.c7 > .input > .clear {
  color: rgba(0,0,0,0.16);
  font-size: 20px;
  height: 24px;
  margin-right: 16px;
}

.c7 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c7 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c7 .input.dropdown {
  cursor: pointer;
}

.c7 input[type="number"] {
  -moz-appearance: textfield;
}

.c7 input[type="number"]::-webkit-inner-spin-button,
.c7 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c7 .prefix,
.c7 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #f6f8f9;
  color: #2f313a;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 .label {
  margin-bottom: 8px;
}

.c6 {
  position: relative;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c6 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c6 .buttons {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 #cancel-button {
  margin: 0 8px;
}

.c5 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(0,0,0,0.16);
}

.c1 .title {
  margin-left: 16px;
}

.c1 .cancel {
  margin-left: 32px;
  margin-right: 16px;
}

.c9 {
  padding: 16px;
  border-top: 1px solid rgba(0,0,0,0.16);
}

.c4 {
  padding: 16px 16px 0 16px;
}

.c0 {
  background: gainsboro;
}

.c0 .header {
  border: solid 4px maroon;
}

.c0 .header .title {
  font-family: fantasy;
}

.c0 .header .cancel {
  -webkit-transform: scaleX(-1);
  -ms-transform: scaleX(-1);
  transform: scaleX(-1);
}

.c0 .body {
  margin: 40px;
}

.c0 .footer {
  border: solid 4px mediumslateblue;
}

.c0 .footer .save {
  opacity: .3;
}

<div
  className="c0"
  id="form-wrapper"
>
  <div
    className="c1 header"
  >
    <div
      className="c2 title"
      fontWeight="title"
      size={16}
      type="#2f313a"
    >
      Title
    </div>
    <div
      className="c3 cancel"
      disabled={false}
      fontWeight="600"
      size={16}
      type="#59636f"
    >
      <span
        id="form-wrapper-cancel"
        onClick={[Function]}
      >
        Cancel
      </span>
    </div>
  </div>
  <div
    className="c4 body"
  >
    <div
      className="c5"
    >
      <div
        className="c6"
      >
        <div
          className="c7"
          disabled={false}
          onClick={[Function]}
          type="text"
        >
          <div
            className="input"
          >
            <input
              className="wrapped"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
          <label
            className="c8 label"
            disabled={false}
          >
            First Name
          </label>
        </div>
      </div>
    </div>
    <div
      className="c5"
    >
      <div
        className="c6"
      >
        <div
          className="c7"
          disabled={false}
          onClick={[Function]}
          type="text"
        >
          <div
            className="input"
          >
            <input
              className="wrapped"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
          <label
            className="c8 label"
            disabled={false}
          >
            Last Name
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c9 footer"
  >
    <button
      className="c10 save"
      id="form-wrapper-save"
      onClick={[Function]}
      size="MEDIUM"
      type="SECONDARY"
    >
      Save
    </button>
  </div>
</div>
`;

exports[`Storyshots Form Wrapper extra content 1`] = `
.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 48px;
  min-width: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  width: 100%;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c9 .icon {
  line-height: 1;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 1.4em;
}

.c9:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c9:focus {
  box-shadow: none;
}

.c9:hover .icon,
.c9:focus .icon {
  color: white;
}

.c9:hover {
  background-color: #2980b9;
}

.c9:focus {
  background-color: #2980b9;
}

.c9:disabled,
.c9:disabled .icon,
.c9:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c9:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c2 span.margin-left {
  margin-left: 4px;
}

.c2 span.margin-right {
  margin-right: 4px;
}

.c2 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #3498db;
}

.c7 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  font-weight: 600;
  color: #2f313a;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.08);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c6 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > .input > input,
.select__search .c6 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c6 > .input > textarea {
  padding: 16px;
}

.c6 > .input > input,
.c6 > .input > textarea,
.select__search .c6 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c6 > .input > input::-webkit-input-placeholder,
.c6 > .input > textarea::-webkit-input-placeholder,
.select__search .c6 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::-moz-placeholder,
.c6 > .input > textarea::-moz-placeholder,
.select__search .c6 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input:-ms-input-placeholder,
.c6 > .input > textarea:-ms-input-placeholder,
.select__search .c6 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::placeholder,
.c6 > .input > textarea::placeholder,
.select__search .c6 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input[type="search"],
.c6 > .input > textarea[type="search"],
.select__search .c6 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c6 > .input > input[type="search"]::-webkit-search-cancel-button,
.c6 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c6 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c6 > .input > input[type="search"]::-ms-clear,
.c6 > .input > textarea[type="search"]::-ms-clear,
.select__search .c6 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c6 > .input > input[role="combobox"],
.c6 > .input > textarea[role="combobox"],
.select__search .c6 > .input input[role="combobox"] {
  cursor: pointer;
}

.c6 > .input > .icon {
  color: rgba(0,0,0,0.08);
  font-size: 20px;
  height: 24px;
}

.c6 > .input > .icon.left {
  margin-left: 12px;
}

.c6 > .input > .icon.dropdown {
  margin: 0 8px;
}

.c6 > .input > .clear {
  color: rgba(0,0,0,0.16);
  font-size: 20px;
  height: 24px;
  margin-right: 16px;
}

.c6 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c6 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c6 .input.dropdown {
  cursor: pointer;
}

.c6 input[type="number"] {
  -moz-appearance: textfield;
}

.c6 input[type="number"]::-webkit-inner-spin-button,
.c6 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c6 .prefix,
.c6 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #f6f8f9;
  color: #2f313a;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .label {
  margin-bottom: 8px;
}

.c5 {
  position: relative;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c5 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c5 .buttons {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 #cancel-button {
  margin: 0 8px;
}

.c4 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(0,0,0,0.16);
}

.c0 .title {
  margin-left: 16px;
}

.c0 .cancel {
  margin-left: 32px;
  margin-right: 16px;
}

.c8 {
  padding: 16px;
  border-top: 1px solid rgba(0,0,0,0.16);
}

.c3 {
  padding: 16px 16px 0 16px;
}

<div
  id="form-wrapper"
>
  <div
    className="c0 header"
  >
    <div
      className="c1 title"
      fontWeight="title"
      size={16}
      type="#2f313a"
    >
      Title
    </div>
    <div
      className="c2 cancel"
      disabled={false}
      fontWeight="600"
      size={16}
      type="#59636f"
    >
      <span
        id="form-wrapper-cancel"
        onClick={[Function]}
      >
        Cancel
      </span>
    </div>
  </div>
  <div
    className="c3 body"
  >
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
          disabled={false}
          onClick={[Function]}
          type="text"
        >
          <div
            className="input"
          >
            <input
              className="wrapped"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
          <label
            className="c7 label"
            disabled={false}
          >
            First Name
          </label>
        </div>
      </div>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
          disabled={false}
          onClick={[Function]}
          type="text"
        >
          <div
            className="input"
          >
            <input
              className="wrapped"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
          <label
            className="c7 label"
            disabled={false}
          >
            Last Name
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c8 footer"
  >
    <button
      className="c9 save"
      id="form-wrapper-save"
      onClick={[Function]}
      size="MEDIUM"
      type="SECONDARY"
    >
      Save
    </button>
  </div>
  <div>
    Extra content renders after save button
  </div>
</div>
`;

exports[`Storyshots Form Wrapper in compact container 1`] = `
.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 48px;
  min-width: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  width: 100%;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c9 .icon {
  line-height: 1;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 1.4em;
}

.c9:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c9:focus {
  box-shadow: none;
}

.c9:hover .icon,
.c9:focus .icon {
  color: white;
}

.c9:hover {
  background-color: #2980b9;
}

.c9:focus {
  background-color: #2980b9;
}

.c9:disabled,
.c9:disabled .icon,
.c9:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c9:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c2 span.margin-left {
  margin-left: 4px;
}

.c2 span.margin-right {
  margin-right: 4px;
}

.c2 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #3498db;
}

.c7 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  font-weight: 600;
  color: #2f313a;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.08);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c6 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > .input > input,
.select__search .c6 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c6 > .input > textarea {
  padding: 16px;
}

.c6 > .input > input,
.c6 > .input > textarea,
.select__search .c6 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c6 > .input > input::-webkit-input-placeholder,
.c6 > .input > textarea::-webkit-input-placeholder,
.select__search .c6 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::-moz-placeholder,
.c6 > .input > textarea::-moz-placeholder,
.select__search .c6 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input:-ms-input-placeholder,
.c6 > .input > textarea:-ms-input-placeholder,
.select__search .c6 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::placeholder,
.c6 > .input > textarea::placeholder,
.select__search .c6 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input[type="search"],
.c6 > .input > textarea[type="search"],
.select__search .c6 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c6 > .input > input[type="search"]::-webkit-search-cancel-button,
.c6 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c6 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c6 > .input > input[type="search"]::-ms-clear,
.c6 > .input > textarea[type="search"]::-ms-clear,
.select__search .c6 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c6 > .input > input[role="combobox"],
.c6 > .input > textarea[role="combobox"],
.select__search .c6 > .input input[role="combobox"] {
  cursor: pointer;
}

.c6 > .input > .icon {
  color: rgba(0,0,0,0.08);
  font-size: 20px;
  height: 24px;
}

.c6 > .input > .icon.left {
  margin-left: 12px;
}

.c6 > .input > .icon.dropdown {
  margin: 0 8px;
}

.c6 > .input > .clear {
  color: rgba(0,0,0,0.16);
  font-size: 20px;
  height: 24px;
  margin-right: 16px;
}

.c6 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c6 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c6 .input.dropdown {
  cursor: pointer;
}

.c6 input[type="number"] {
  -moz-appearance: textfield;
}

.c6 input[type="number"]::-webkit-inner-spin-button,
.c6 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c6 .prefix,
.c6 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #f6f8f9;
  color: #2f313a;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .label {
  margin-bottom: 8px;
}

.c5 {
  position: relative;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c5 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c5 .buttons {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 #cancel-button {
  margin: 0 8px;
}

.c4 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(0,0,0,0.16);
}

.c0 .title {
  margin-left: 16px;
}

.c0 .cancel {
  margin-left: 32px;
  margin-right: 16px;
}

.c8 {
  padding: 16px;
  border-top: 1px solid rgba(0,0,0,0.16);
}

.c3 {
  padding: 16px 16px 0 16px;
}

<div
  style={
    Object {
      "display": "inline-block",
    }
  }
>
  <div
    id="form-wrapper"
  >
    <div
      className="c0 header"
    >
      <div
        className="c1 title"
        fontWeight="title"
        size={16}
        type="#2f313a"
      >
        Long Title That Should Not Touch The Cancel Button
      </div>
      <div
        className="c2 cancel"
        disabled={false}
        fontWeight="600"
        size={16}
        type="#59636f"
      >
        <span
          id="form-wrapper-cancel"
          onClick={[Function]}
        >
          Cancel
        </span>
      </div>
    </div>
    <div
      className="c3 body"
    >
      <div
        className="c4"
      >
        <div
          className="c5"
        >
          <div
            className="c6"
            disabled={false}
            onClick={[Function]}
            type="text"
          >
            <div
              className="input"
            >
              <input
                className="wrapped"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value=""
              />
            </div>
            <label
              className="c7 label"
              disabled={false}
            >
              First Name
            </label>
          </div>
        </div>
      </div>
      <div
        className="c4"
      >
        <div
          className="c5"
        >
          <div
            className="c6"
            disabled={false}
            onClick={[Function]}
            type="text"
          >
            <div
              className="input"
            >
              <input
                className="wrapped"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value=""
              />
            </div>
            <label
              className="c7 label"
              disabled={false}
            >
              Last Name
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c8 footer"
    >
      <button
        className="c9 save"
        id="form-wrapper-save"
        onClick={[Function]}
        size="MEDIUM"
        type="SECONDARY"
      >
        Save
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Form Wrapper loading 1`] = `
.c10 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c10 .farmblocks-icon {
  display: block;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 48px;
  min-width: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  width: 100%;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c9 .icon {
  line-height: 1;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 1.4em;
}

.c9:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c9:focus {
  box-shadow: none;
}

.c9:hover .icon,
.c9:focus .icon {
  color: white;
}

.c9 > .icon.left-icon i::before {
  display: inline-block;
  -webkit-animation: spin 1.1s infinite linear;
  animation: spin 1.1s infinite linear;
}

.c9:hover {
  background-color: #2980b9;
}

.c9:focus {
  background-color: #2980b9;
}

.c9:disabled,
.c9:disabled .icon,
.c9:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c9:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c11 {
  -webkit-animation: 2s linear 0s infinite normal eoUyJr;
  animation: 2s linear 0s infinite normal eoUyJr;
}

.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c2 span.margin-left {
  margin-left: 4px;
}

.c2 span.margin-right {
  margin-right: 4px;
}

.c2 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #3498db;
}

.c7 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  font-weight: 600;
  color: #2f313a;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.08);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c6 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > .input > input,
.select__search .c6 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c6 > .input > textarea {
  padding: 16px;
}

.c6 > .input > input,
.c6 > .input > textarea,
.select__search .c6 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c6 > .input > input::-webkit-input-placeholder,
.c6 > .input > textarea::-webkit-input-placeholder,
.select__search .c6 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::-moz-placeholder,
.c6 > .input > textarea::-moz-placeholder,
.select__search .c6 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input:-ms-input-placeholder,
.c6 > .input > textarea:-ms-input-placeholder,
.select__search .c6 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::placeholder,
.c6 > .input > textarea::placeholder,
.select__search .c6 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input[type="search"],
.c6 > .input > textarea[type="search"],
.select__search .c6 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c6 > .input > input[type="search"]::-webkit-search-cancel-button,
.c6 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c6 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c6 > .input > input[type="search"]::-ms-clear,
.c6 > .input > textarea[type="search"]::-ms-clear,
.select__search .c6 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c6 > .input > input[role="combobox"],
.c6 > .input > textarea[role="combobox"],
.select__search .c6 > .input input[role="combobox"] {
  cursor: pointer;
}

.c6 > .input > .icon {
  color: rgba(0,0,0,0.08);
  font-size: 20px;
  height: 24px;
}

.c6 > .input > .icon.left {
  margin-left: 12px;
}

.c6 > .input > .icon.dropdown {
  margin: 0 8px;
}

.c6 > .input > .clear {
  color: rgba(0,0,0,0.16);
  font-size: 20px;
  height: 24px;
  margin-right: 16px;
}

.c6 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c6 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c6 .input.dropdown {
  cursor: pointer;
}

.c6 input[type="number"] {
  -moz-appearance: textfield;
}

.c6 input[type="number"]::-webkit-inner-spin-button,
.c6 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c6 .prefix,
.c6 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #f6f8f9;
  color: #2f313a;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .label {
  margin-bottom: 8px;
}

.c5 {
  position: relative;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c5 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c5 .buttons {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 #cancel-button {
  margin: 0 8px;
}

.c4 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(0,0,0,0.16);
}

.c0 .title {
  margin-left: 16px;
}

.c0 .cancel {
  margin-left: 32px;
  margin-right: 16px;
}

.c8 {
  padding: 16px;
  border-top: 1px solid rgba(0,0,0,0.16);
}

.c3 {
  padding: 16px 16px 0 16px;
}

<div
  id="form-wrapper"
>
  <div
    className="c0 header"
  >
    <div
      className="c1 title"
      fontWeight="title"
      size={16}
      type="#2f313a"
    >
      Title
    </div>
    <div
      className="c2 cancel"
      disabled={false}
      fontWeight="600"
      size={16}
      type="#59636f"
    >
      <span
        id="form-wrapper-cancel"
        onClick={[Function]}
      >
        Cancel
      </span>
    </div>
  </div>
  <div
    className="c3 body"
  >
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
          disabled={false}
          onClick={[Function]}
          type="text"
        >
          <div
            className="input"
          >
            <input
              className="wrapped"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
          <label
            className="c7 label"
            disabled={false}
          >
            First Name
          </label>
        </div>
      </div>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
          disabled={false}
          onClick={[Function]}
          type="text"
        >
          <div
            className="input"
          >
            <input
              className="wrapped"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
          <label
            className="c7 label"
            disabled={false}
          >
            Last Name
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c8 footer"
  >
    <button
      className="c9 save"
      disabled={true}
      id="form-wrapper-save"
      onClick={[Function]}
      size="MEDIUM"
      type="SECONDARY"
    >
      <div
        className="icon left-icon"
        style={
          Object {
            "transform": "translateX(-6px)",
          }
        }
      >
        <span
          className="c10"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon c11"
            data-testid="loading"
            height="1em"
            viewBox="4 4 32 32"
            width="1em"
          >
            <path
              d="M19 8a1 1 0 012 0v6a1 1 0 01-2 0V8zm2 24a1 1 0 01-2 0v-5a1 1 0 012 0v5zM8 21a1 1 0 010-2h6a1 1 0 010 2H8zm18-.5a.5.5 0 110-1h6a.5.5 0 110 1h-6zm3.197 7.283a1 1 0 01-1.414 1.414l-3.86-3.86a1 1 0 011.414-1.414l3.86 3.86zm-12.87-12.87a1 1 0 01-1.414 1.414l-4.11-4.11a1 1 0 011.414-1.414l4.11 4.11zm-1.664 9.01a1 1 0 011.414 1.414l-3.86 3.86a1 1 0 01-1.414-1.414l3.86-3.86zm13.12-13.12a1 1 0 011.414 1.414l-4.11 4.11a1 1 0 01-1.414-1.414l4.11-4.11z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
        </span>
      </div>
      Save
    </button>
  </div>
</div>
`;
